src/objects/CD_Item_Cost_Assy_details__c.object
<CustomObject>
    <fields>
        <fullName>Assembly_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assembly Details</label>
        <referenceTo>CD_Cost_Assy_Items__c</referenceTo>
        <relationshipLabel>CD Item Cost Assy details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Assy_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Assy_Details_ID__c</fullName>
        <label>Cost Assy Details ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost ID</label>
        <referenceTo>CD_Item_Cost_Details__c</referenceTo>
        <relationshipLabel>CD Item Cost Assy details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Assy_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>CD Cost Assy Details</label>
    <nameField>
        <label>CD Cost Assy Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Cost Assy Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>